--- a/disdemo.html
+++ b/disdemo.html
@@ -71,7 +71,7 @@
 
 			async function loadProtectedContent() {
 			    try {
-			        const response = await fetch('protected.html');
+			        const response = await fetch('index.html');
 			        if (!response.ok) {
 			            throw new Error('Failed to load content');
 			        }
