--- a/disdemo.html
+++ b/disdemo.html
@@ -22,7 +22,7 @@
 				<button onclick="appendDigit(1)">1</button>
 				<button onclick="appendDigit(2)">2</button>
 				<button onclick="appendDigit(3)">3</button>
-				<button onclick="appendDigit(4)">4></button>
+				<button onclick="appendDigit(4)">4</button>
 				<button onclick="appendDigit(5)">5</button>
 				<button onclick="appendDigit(6)">6</button>
 				<button onclick="appendDigit(7)">7</button>
@@ -71,7 +71,7 @@
 
 			async function loadProtectedContent() {
 			    try {
-			        const response = await fetch('index.html');
+			        const response = await fetch('protected.html');
 			        if (!response.ok) {
 			            throw new Error('Failed to load content');
 			        }
@@ -82,7 +82,11 @@
 			        tempDiv.innerHTML = html;
 
 			        // Extract the content from the body of protected.html
-			        const protectedBodyContent = tempDiv.querySelector('body').innerHTML;
+			        const protectedBody = tempDiv.querySelector('body');
+			        if (!protectedBody) {
+			            throw new Error('No body content found in protected.html');
+			        }
+			        const protectedBodyContent = protectedBody.innerHTML;
 
 			        // Inject the extracted content into the protectedContent div
 			        document.getElementById('protectedContent').innerHTML = protectedBodyContent;
@@ -90,8 +94,12 @@
 			        document.querySelector('.container').style.display = 'none'; // Hide password container
 
 			        // Append the head content to the current document's head
-			        const headContent = tempDiv.querySelector('head').innerHTML;
-			        document.head.innerHTML += headContent;
+			        const headContent = tempDiv.querySelector('head');
+			        if (headContent) {
+			            document.head.innerHTML += headContent.innerHTML;
+			        } else {
+			            console.warn('No head content found in protected.html');
+			        }
 			    } catch (error) {
 			        console.error('Error loading protected content:', error);
 			    }
