--- a/disdemo.html
+++ b/disdemo.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Searching for Us @ DIS'24</title>
 		<link rel="stylesheet" href="pwd.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 	</head>
 	<body>
 		<div class="logo">
@@ -70,47 +73,34 @@
 			}
 
 			async function loadProtectedContent() {
-			         try {
-			             const response = await fetch('index.html');
-			             if (!response.ok) {
-			                 throw new Error('Failed to load content');
-			             }
-			             const html = await response.text();
+				try {
+					const response = await fetch('index.html');
+					if (!response.ok) {
+						throw new Error('Failed to load content');
+					}
+					const html = await response.text();
 
-			             // Create a temporary container element
-			             const tempDiv = document.createElement('div');
-			             tempDiv.innerHTML = html;
+					// Replace the entire body content
+					document.body.innerHTML = html;
 
-			             // Extract the content from the body of protected.html
-			             const protectedBody = tempDiv.querySelector('body');
-			             if (!protectedBody) {
-			                 throw new Error('No body content found in protected.html');
-			             }
-			             const protectedBodyContent = protectedBody.innerHTML;
+					// Parse the loaded HTML to extract and apply head content
+					const parser = new DOMParser();
+					const doc = parser.parseFromString(html, 'text/html');
+					const newHead = doc.querySelector('head');
 
-			             // Inject the extracted content into the protectedContent div
-			             document.getElementById('protectedContent').innerHTML = protectedBodyContent;
-			             document.getElementById('protectedContent').classList.remove('hidden');
-			             document.querySelector('.container').style.display = 'none'; // Hide password container
+					if (newHead) {
+						// Replace the existing head content
+						document.head.innerHTML = newHead.innerHTML;
+					}
 
-			             // Append the head content to the current document's head
-			             const headContent = tempDiv.querySelector('head');
-			             if (headContent) {
-			                 document.head.innerHTML += headContent.innerHTML;
+					// Reinitialize any necessary scripts or event listeners here
+					// For example:
+					// initializeScripts();
 
-			                 // Reload external scripts
-			                 headContent.querySelectorAll('script').forEach(script => {
-			                     const newScript = document.createElement('script');
-			                     newScript.src = script.src;
-			                     document.head.appendChild(newScript);
-			                 });
-			             } else {
-			                 console.warn('No head content found in protected.html');
-			             }
-			         } catch (error) {
-			             console.error('Error loading protected content:', error);
-			         }
-			     }
+				} catch (error) {
+					console.error('Error loading protected content:', error);
+				}
+			}
 
 			// Clear the current input when the page is loaded
 			window.addEventListener('DOMContentLoaded', function() {
