--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
 				var connecting_Sound = new Howl({src: ['audio/ui_loading.mp3'],
 				onloaderror: function(error) {console.error('Error loading audio:', error);},});
+				var bgm_Sound=new Howl({src:['audio/bgm.mp3'],loop:true,volume:0.3});
 
 				async function initializeSounds() {
 					try {
@@ -1328,6 +1329,7 @@
 						topSection.style.display = 'none';
 						displayText("Listening as "+characterName+".");
 						window[characterName + "_Sound"].play();
+						bgm_Sound.play();
 					}
 				}, 5000);
 			}
