--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 								document.getElementById("hachiCheckbox").click();
 								characterName = "Hachi";
 								window[characterName + "_Sound"].play();
+								bgm_Sound.play();
 								notification_Sound.play();
 							} else {
 								console.log("Loading settings for Avatar_BT");
@@ -211,6 +212,7 @@
 								initializeSounds();
 								characterName = "Buro";
 								window[characterName + "_Sound"].play();
+								bgm_Sound.play();
 								notification_Sound.play();
 							}
 							// Listen for characteristic value changes
