--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div id="loading-screen">
 			<div class="loader"></div>
-			<p>Loading...</p>
+			<p id="loading-text">Loading...</p>
 		</div>
 
 		<!-- Checkbox for Hachi -->
