--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 					// Check if latitude, longitude, and weatherDescription are not null
 					if (latitude !== null && longitude !== null) {
 						connectButton.disabled = false;
-						initializeSounds();
+						//initializeSounds();
 					} else {
 						// If any variable is still null, wait for a short delay and check again
 						setTimeout(checkVariables, 1000);
