--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<body>
 		<div id="loading-screen">
 			<div class="loader"></div>
-			<p id="loading-text">Loading...</p>
+			<img class="logo" src="logo.svg" alt="Logo" />
+			<p id="loading-text">Loading resources...</p>
 		</div>
 
 		<!-- Checkbox for Hachi -->
