--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
 							function soundLoaded() {
 								loadedSounds++;
 
+								const percentage = Math.round((loadedSounds / totalSounds) * 100);
+								document.getElementById('loading-text').textContent = `Loading resources... ${percentage}%`;
+
 								// Check if all sounds are loaded
 								if (loadedSounds === totalSounds) {
-									console.log('All sounds loaded');
+									console.log('All resources loaded');
 									hideLoadingScreen(); // Hide loading screen when all sounds are loaded
 								}
 							}
@@ -124,16 +127,16 @@
 										src: [sounds[key].src],
 										volume: 0.4,
 										onload: soundLoaded, // Call soundLoaded() when sound is loaded successfully
-										onloaderror: function(error) { console.error('Error loading audio:', error); }
+										onloaderror: function(error) { console.error('Error loading resources:', error); }
 									});
 								}
 							}
 						} else {
-							console.error('Failed to load sounds.');
+							console.error('Failed to load resources.');
 							hideLoadingScreen(); // Hide loading screen on failure to load sounds
 						}
 					} catch (error) {
-						console.error('Error initializing sounds:', error);
+						console.error('Error initializing resources:', error);
 						hideLoadingScreen(); // Hide loading screen on error
 					}
 				}
