--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="loading-screen">
 			<div class="loader"></div>
 			<img class="logo" src="logo.svg" alt="Logo" />
-			<p id="loading-text">Intializing...</p>
+			<p id="loading-text">Initializing...</p>
 		</div>
 
 		<!-- Checkbox for Hachi -->
