--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2350,7 +2350,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
    
-   &lt;&lt;if $avatar_tag !== 27 and $avatar_tag !== 26 and $avatar_tag !== 0 &gt;&gt;
+   &lt;&lt;if $avatar_tag !== 27 and $avatar_tag !== 26 and $avatar_tag == 0 &gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;avatar_wrong/This does not seem to be the bakery or the church, Buro said a bit confused/m_intrigued/&quot;&gt;&gt;
    &lt;&lt;/if&gt;&gt;
    
@@ -2405,7 +2405,6 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
 
 &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;	
 
-   
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
 &lt;&lt;set $storyTime to &#39;&#39;&gt;&gt;
