--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2350,8 +2350,10 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
    
-   &lt;&lt;if $avatar_tag !== 27 and $avatar_tag !== 26 and $avatar_tag == 0 &gt;&gt;
+   &lt;&lt;if $avatar_tag !== 27 and $avatar_tag !== 26&gt;&gt;
+   &lt;&lt;if $avatar_tag !== 0 &gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;avatar_wrong/This does not seem to be the bakery or the church, Buro said a bit confused/m_intrigued/&quot;&gt;&gt;
+   &lt;&lt;/if&gt;&gt;
    &lt;&lt;/if&gt;&gt;
    
 &lt;&lt;/liveblock&gt;&gt;
