--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2336,8 +2336,7 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;/if&gt;&gt;
     
-    &lt;&lt;if $avatar_tag !== 27 and $avatar_tag !== 26&gt;&gt;
-   &lt;&lt;if $avatar_tag !== 0 &gt;&gt;
+    &lt;&lt;if $avatar_tag !== 27 and $avatar_tag !== 26 and avatar_tag !==0&gt;&gt;
 &lt;&lt;set $avatar_passage to &quot;avatar_wrong/This does not seem to be the bakery or the church, Buro said a bit confused/m_intrigued/&quot;&gt;&gt;
    &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -2355,9 +2354,6 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
           &lt;&lt;include&quot;avatar_bakery_1&quot;&gt;&gt;
     &lt;&lt;/replace&gt;&gt;
    &lt;&lt;/if&gt;&gt;
-   
-
-   
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;
