--- a/index.html
+++ b/index.html
@@ -919,11 +919,11 @@
 						return; // Exit the function without speaking again
 					}
 
-					// Check if currently speaking
-					if (speaking) {
-						console.log("Already speaking, new message ignored.");
-						return;
-					}
+					// // Check if currently speaking
+					// if (speaking) {
+					// 	console.log("Already speaking, new message ignored.");
+					// 	return;
+					// }
 
 					if (transliteratedMessage === "") {
 						console.log("Empty text, message ignored.");
