--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2402,7 +2402,13 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
         &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;	
+&lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
+	&lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
+&lt;&lt;/replace&gt;&gt;
+
+&lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
+	&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
+&lt;&lt;/replace&gt;&gt;
 
 /*
 &lt;&lt;set $storyWeather to &#39;&#39;&gt;&gt;
