--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2402,6 +2402,13 @@ makeComments(&#39;avatar&#39;,&#39;observes&#39;);
   &lt;/div&gt;
 &lt;/div&gt;
 
+&lt;div id=&quot;bottomContainer&quot;&gt;
+        &lt;div id=&quot;avatar_story&quot;&gt;
+        &lt;/div&gt;
+        &lt;div id=&quot;hachi_story&quot;&gt;
+        &lt;/div&gt;
+&lt;/div&gt;
+
 &lt;&lt;timed 1s&gt;&gt;
     &lt;&lt;replace &quot;#avatar_story&quot;&gt;&gt;
         &lt;&lt;include &quot;avatar_act2_transition&quot;&gt;&gt;
