--- a/index.html
+++ b/index.html
@@ -63,7 +63,13 @@
 			</div>
 			<div class="bottom-section">
 				<!-- Connect Button. -->
-				<button id="connectButton" class="button" style="display: none;" disabled onclick="connecting_Sound.play(), displayText(this.innerText)">
+				<button
+					id="connectButton"
+					class="button"
+					style="display: none;"
+					disabled
+					onclick="connecting_Sound.play(), displayText(this.textContent.trim())"
+				>
 					<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 				</button>
 			</div>
