--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2672,7 +2672,7 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
           var passage_temp = variables().hachi_passage;
           const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
           console.log(renderedText);
-          writeTohachi(&#39;hachi_passage&#39;,renderedText);
+          writeToHachi(&#39;hachi_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
