--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2690,6 +2690,16 @@ makeComments(&#39;hachi&#39;,&#39;observes&#39;);
             &lt;&lt;include &quot;hachi_end&quot;&gt;&gt;
         &lt;&lt;/replace&gt;&gt;
     &lt;&lt;/if&gt;&gt;
+    
+&lt;div id=&quot;bottomContainer&quot;&gt;
+        &lt;div id=&quot;avatar_story&quot;&gt;
+			$avatar_passage  
+        &lt;/div&gt;
+        &lt;div id=&quot;hachi_story&quot;&gt;
+   			$hachi_passage
+        &lt;/div&gt;
+&lt;/div&gt;
+
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;
