--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2640,11 +2640,9 @@ $avatar_passage
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeComments(&#39;avatar&#39;,&#39;observes&#39;);
-makeComments(&#39;hachi&#39;,&#39;observes&#39;);
+makeComments(&#39;avatar&#39;,&#39;waits&#39;);
+makeComments(&#39;hachi&#39;,&#39;waits&#39;);
 &lt;&lt;/script&gt;&gt;
-
-
 
 &lt;&lt;set  $avatar_prevComment to $avatar_comment &gt;&gt;
 &lt;&lt;repeat 500ms&gt;&gt;
