--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2653,7 +2653,7 @@ makeComments(&#39;hachi&#39;,&#39;waits&#39;);
           &lt;&lt;script&gt;&gt;
           var passage_temp = variables().avatar_passage;
           const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
-          //console.log(renderedText);
+          console.log(renderedText);
           writeToAvatar(&#39;avatar_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
@@ -2668,7 +2668,7 @@ makeComments(&#39;hachi&#39;,&#39;waits&#39;);
           &lt;&lt;script&gt;&gt;
           var passage_temp = variables().hachi_passage;
           const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
-          //console.log(renderedText);
+          console.log(renderedText);
           writeToHachi(&#39;hachi_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
