--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -807,7 +807,7 @@ let cachedShortSentences;
 //This function is for movements
 window.makeShortComments = async function(character, key) {
     // Log function entry
-    //console.log("This is makeShortComments");
+    console.log("This is makeShortComments"+character+key);
     //console.log("makeShortComments function called with character:", character, "and key:", key);
 
     try {
