--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2640,8 +2640,8 @@ $avatar_passage
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeShortComments(&#39;hachi&#39;, &#39;waiting&#39;); 
-makeShortComments(&#39;avatar&#39;, &#39;waiting&#39;); 
+makeShortComments(&#39;hachi&#39;, &#39;waits&#39;); 
+makeShortComments(&#39;avatar&#39;, &#39;waits&#39;); 
 &lt;&lt;/script&gt;&gt;
 
 &lt;&lt;set  $avatar_prevComment to $avatar_comment &gt;&gt;
